Documentation progress Few routes related to courses were added
