# src/dtos/courses.dto.ts
@@ -1,0 +1,9 @@
+import { IsInt, IsString } from "class-validator";
+
+export class CreateCourseDto {
+  @IsString()
+  public name: string;
+
+  @IsInt()
+  public teacherId: number;
+}
