# swagger.yaml
@@ -112,28 +112,138 @@ paths:
 
 # definitions
 definitions:
+  UserRole:
+    type: string
+    description: |
+      This is mainly to keep the strings consistent and less prone to errors. Should be used wherever role String is required.
+    enum:
+      - STUDENT
+      - PARENT
+      - TEACHER
+      - CHAIR
+      - SYSTEM_ADMINISTRATOR
+
   User:
     type: object
+    description: This model represents each and every user in our system, it is required for authentication system.
     required:
         - email
         - password
         - role
     properties:
+      id:
+        type: number
+        description: Autogenerated
       email:
         type: string
-        description: user Email
+        description: User's email
       password:
         type: string
-        description: user Password
+        description: User's plain text password, will be encrypted in the database.
       role:
-        type: number
-        description: |
-          1 - Student (View own records)
-          2 - Parent (View children records)
-          3 - Teacher (Enter/modify own student(in same group) records)
-          4 - Chair (View all department students records)
-          5 - System Administrator (Create new course/groups, Create new user and grants/revokes perms)
+        type: string
+        $ref: '#/definitions/UserRole'
+      student:
+        type: object
+        $ref: '#/definitions/Student'
+      parent:
+        type: object
+        $ref: ''
 
-schemes:
- - https
- - http
+  Student:
+    type: object
+    required:
+      - fullName
+      - userId
+    properties: 
+      id:
+        type: number
+        description: Autogenerated
+      fullName:
+        type: string
+        description: The student's full name
+      
+      user:
+        type: object
+        $ref: '#/definitions/User'
+      userId:
+        type: number
+        description: The id of the user related to this student
+      parent:
+        type: object
+        $ref: '#/definitions/Parent'
+      courses:
+        type: array
+        items: 
+          $ref: ''
+
+  Parent:
+    type: object
+    required:
+      - fullName
+      - userId
+    properties: 
+      id:
+        type: number
+        description: Autogenerated
+      fullName:
+        type: string
+        description: The parent's full name
+      
+      user:
+        type: object
+        $ref: '#/definitions/User'
+      userId:
+        type: number
+        description: The id of the user related to this parent
+      children:
+        type: array
+        items: 
+          $ref: '#/definitions/Student'
+  Teacher:
+    type: object
+    required:
+      - fullName
+      - userId
+    properties: 
+      id:
+        type: number
+        description: Autogenerated
+      fullName:
+        type: string
+        description: The teacher's full name
+      
+      user:
+        type: object
+        $ref: '#/definitions/User'
+      userId:
+        type: number
+        description: The id of the user related to this teacher
+      courseGroups:
+        type: array
+        items: 
+          $ref: '#/definitions/CourseGroup'
+
+  CourseGroup:
+    type: object
+    description: This model represents each and every coure-group our system contains.
+    required:
+      - name
+    properties: 
+      id:
+        type: number
+        description: Autogenerated
+      name:
+        type: string
+        description: |
+          The course name, usually contains the group number aswell. example: CMSE353(01)
+      teacher:
+        type: object
+        $ref: '#/definitions/Teacher'
+      teacherId:
+        type: number
+        description: The id of the teacher related to this coursegroup
+      students:
+        type: array
+        items: 
+          $ref: '#/definitions/Student'
